<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginBottom="8dp">

        <!-- Page Title -->
        <TextView
            android:id="@+id/goalsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/goals_page_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addGoalButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

        <!-- Add Goal Button -->
        <ImageButton
            android:id="@+id/addGoalButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_add_custom"
            android:contentDescription="@string/add_goal"
            android:background="@android:color/transparent"
            app:tint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goals_page_subtitle"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goals_page_subtitle2"
        android:textSize="14sp"
        android:paddingBottom="16dp" />

    <!-- Goals -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/run_goal"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yoga_goal"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarYoga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycling_goal"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarCycling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxing_goal"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarBoxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swimming_goal"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarSwimming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>
